# SymmetricNonogram

./: Known Errors  README.md  SymmetricNonogram.cabal  stack.yaml
app/: FilterLocal.hs  FilterMultipleSolutions.hs  SymmetricGrids.hs  ToHints.hs
lib/: Nonogram.hs
lib/Nonogram/: Coordinate.hs  Hints.hs  Knowledge.hs  Local.hs  Solution.hs
lib/Nonogram/Knowledge/: Class.hs  GridNST.hs  GridST.hs  STKnowledgeGrid.hs  STNKnowledgeGrid.hs
src/Nonogram/: Coordinate.hs  Solution.hs
