cabal-version: 3.0
name: SymmetricNonogram
version: 0.1.0.0
author: olligobber
build-type: Simple

common shared-properties
	default-language: Haskell2010
	ghc-options:
		-Weverything
		-Wno-implicit-prelude
		-Wno-missed-specialisations
		-Wno-all-missed-specialisations
		-Wno-missing-import-lists
		-Wno-unsafe
		-Wno-safe
		-Wno-missing-exported-signatures
		-Wno-missing-safe-haskell-mode
		-Wno-missing-deriving-strategies
		-Wno-prepositive-qualified-module
		-Wno-tabs
		-Wno-missing-kind-signatures

library Nonogram
	import: shared-properties
	exposed-modules:
		Nonogram,
		Nonogram.Coordinate,
		Nonogram.Solution,
	build-depends:
		base ^>= 4.17.2,
		containers ^>= 0.6.7,
		array ^>= 0.5.4,
	hs-source-dirs: src

executable SymmetricGrids
	import: shared-properties
	main-is: SymmetricGrids.hs
	build-depends:
		base ^>= 4.17.2,
		containers ^>= 0.6.7,
		Nonogram,
	hs-source-dirs: app
