cabal-version: 3.0
name: SymmetricNonogram
version: 0.1.0.0
author: olligobber
build-type: Simple

common shared-properties
	default-language: Haskell2010
	ghc-options:
		-Weverything
		-Wno-implicit-prelude
		-Wno-missed-specialisations
		-Wno-all-missed-specialisations
		-Wno-missing-import-lists
		-Wno-unsafe
		-Wno-safe
		-Wno-missing-exported-signatures
		-Wno-missing-safe-haskell-mode
		-Wno-missing-deriving-strategies
		-Wno-prepositive-qualified-module
		-Wno-tabs
		-Wno-missing-kind-signatures
		-Wno-x-partial
		-Wno-missing-role-annotations
		-XScopedTypeVariables

library Nonogram
	import: shared-properties
	exposed-modules:
		Nonogram,
		Nonogram.Coordinate,
		Nonogram.Solution,
		Nonogram.Hints,
		Nonogram.Knowledge,
		Nonogram.Knowledge.Class,
		Nonogram.Knowledge.GridST,
		Nonogram.Knowledge.GridNST,
		Nonogram.Local,
	build-depends:
		base ^>= 4.20.2.0,
		containers ^>= 0.7,
		array ^>= 0.5.8,
		split ^>= 0.2.5,
		extra ^>= 1.8.1,
	hs-source-dirs: lib

executable SymmetricGrids
	import: shared-properties
	main-is: SymmetricGrids.hs
	build-depends:
		base ^>= 4.20.2.0,
		containers ^>= 0.7,
		Nonogram,
	hs-source-dirs: app

executable ToHints
	import: shared-properties
	main-is: ToHints.hs
	build-depends:
		base ^>= 4.20.2.0,
		Nonogram,
	hs-source-dirs: app

executable FilterLocal
	import: shared-properties
	main-is: FilterLocal.hs
	build-depends:
		base ^>= 4.20.2.0,
		Nonogram,
	hs-source-dirs: app

executable FilterMultipleSolutions
	import: shared-properties
	main-is: FilterMultipleSolutions.hs
	build-depends:
		base ^>= 4.20.2.0,
		Nonogram,
	hs-source-dirs: app